--- a/track-journal-first.html
+++ b/track-journal-first.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
 
 <html lang="en-us">
 
@@ -15,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="description" content="This is meta description">
   <meta name="author" content="Themefisher">
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/wer/logo_wer2023.png" type="image/x-icon">
+  <link rel="icon" href="images/wer/logo_wer2023.png" type="image/x-icon">
 
   <!-- # Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
