--- a/organizacao.html
+++ b/organizacao.html
@@ -115,7 +115,7 @@
             <h3 id="tools-track">Software Requirement Tools Track Chair</h3>
             <ul>
               <li><b>Johnny Marques</b> -- Instituto Tecnológico de Aeronáutica - Brasil</li>
-              <li><b>Vera Werneck</b> -- Universidade Estadual do Rio de Janeiro, Brasil</li>
+              <li><b>Vera Werneck</b> -- Universidade Estadual do Rio de Janeiro - Brasil</li>
             </ul>
 
 
