--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li class="nav-item "> <a class="nav-link" href="organizacao.html">Organização</a>
             </li>
           </ul>
-          <!-- account btn --> <a href="#!" class="btn btn-outline-secondary">English</a>
+          <!-- account btn --> <a href="en/index.html" class="btn btn-outline-secondary">English</a>
           <a href="inscricao.html" class="btn btn-outline-primary">Inscrição</a>
         </div>
       </div>
@@ -88,7 +88,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="block text-center text-lg-start pe-0 pe-xl-5">
-            <h1 class="text-capitalize mb-4">Workshop de Engenharia de Requisitos</h1>
+            <h1 class="mb-4">Workshop de Engenharia de Requisitos</h1>
             <!-- <p class="mb-4">We have collected the best offers of credit institutions and banks
               <br>of Colombia. It remains to choose what suits you as fast as you.
             </p> <a type="button" class="btn btn-primary" href="#" data-bs-toggle="modal"
@@ -261,9 +261,6 @@
                   <p class="mb-0">Campus São Borja</p>
                 </div>
               </div>
-              <!-- <div class="content">Lorem ipsum dolor <a href="http://google.com">@reamansimond</a> demina egestas sit
-              purus
-              felis arcu. Vitae, turpisds tortr etiam faucibus ac suspendisse.</div>-->
             </div>
           </a>
         </div>
