--- a/inscricao.html
+++ b/inscricao.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
+
 
 <html lang="en-us">
 
@@ -92,7 +87,8 @@
     </header>
     <!-- /navigation -->
 
-    <section class="overflow-hidden">
+
+    <section class="overflow-hidden section-sm">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 mx-auto">
