--- a/track-regular.html
+++ b/track-regular.html
@@ -88,7 +88,7 @@
   <!-- /navigation -->
 
 
-  <div class="section">
+  <div class="section-sm">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-10">
@@ -163,7 +163,7 @@
   </div>
 
   <!-- footer -->
-  <footer class="section-sm">
+  <footer>
     <div class="container">
       <div class="row justify-content-between">
         <div class="row align-items-center mt-5 text-center text-md-start">
